--- a/BitBucket/1.Chapter1.md
+++ b/BitBucket/1.Chapter1.md
@@ -1,5 +1,5 @@
 ## Step 1. Clone your repository to your local system
-````log
+````Shell
 $ git clone
 
 https://emmap1@bitbucket.org/emmap1/bitbucketstationlocations.git 
@@ -10,16 +10,16 @@ Password for 'https://emmap1@bitbucket.org': No such file or directory
 ````
 
 If you get this error you need to do something like this 
-````log
+````Shell
   $ git config --global core.askpass
 ````
 
 ## Step 2. Add a file to your local repository  
 Adding a file
-````log
+````Shell
 $ echo "Earth's Moon" >> locations.txt
 ````
-````log
+````Shell
 $ git status 
  On branch main
  Initial commit
@@ -33,7 +33,7 @@ The file is untracked, meaning that Git sees a file not part of a previous commi
 
 
 - Tell Git to track your new locations.txt 
-````log
+````Shell
 $ git add locations.txt
 ````
 The `git add` command moves changes from the working directory to the Git staging area. The staging area is where you prepare a snapshot of a set of changes before committing them to the official history.
@@ -41,7 +41,7 @@ The `git add` command moves changes from the working directory to the Git stagin
 ![Image](/BitBucket/Images/1/1.svg)
 
 - Check the status of the file.
-````log
+````Shell
  $ git status 
  On branch main
  Initial commit
@@ -50,7 +50,7 @@ The `git add` command moves changes from the working directory to the Git stagin
      new file: locations.txt
 ````
 - Commit the changes
-````log
+````Shell
 $ git commit -m 'Initial commit' 
  [main (root-commit) fedc3d3] Initial commit
   1 file changed, 1 insertion(+)
