--- a/BitBucket/1.Chapter1.md
+++ b/BitBucket/1.Chapter1.md
@@ -17,21 +17,12 @@ If you get this error you need to do something like this
 ````
 
 ## Step 2. Add a file to your local repository  
-- Adding a file
-    ````Shell
-    $ echo "Earth's Moon" >> locations.txt
-    ````
+- Checking the status
     ````Shell
     $ git status 
-    On branch main
-    Initial commit
-    Untracked files:
-      (use "git add <file>..." to include in what will be committed)
-        locations.txt
-    nothing added to commit but untracked files present (use "git add" to track)
     ````
 
-    The file is untracked, meaning that Git sees a file not part of a previous commit. The status output also shows you the next step: adding the file.
+    The file is `untracked`, meaning that Git sees a file not part of a previous commit. The status output also shows you the next step: adding the file.
 
 
 - Tell Git to track your new locations.txt 
@@ -45,11 +36,6 @@ If you get this error you need to do something like this
 - Check the status of the file.
     ````Shell
     $ git status 
-    On branch main
-    Initial commit
-    Changes to be committed:
-      (use "git rm --cached <file>..." to unstage)
-        new file: locations.txt
     ````
 - Commit the changes
     ````Shell
@@ -61,3 +47,10 @@ If you get this error you need to do something like this
     The `git commit` takes the staged snapshot and commits it to the project history. Combined with `git add`, this process defines the basic workflow for all Git users.
 
     ![Image](/BitBucket/Images/1/2.svg)
+
+
+## Step 3. Pushing to Remote Repo
+
+
+## Reference 
+- https://www.atlassian.com/git/tutorials/learn-git-with-bitbucket-cloud#create-the-repository
