--- a/BitBucket/1.Chapter1.md
+++ b/BitBucket/1.Chapter1.md
@@ -52,5 +52,8 @@ If you get this error you need to do something like this
 ## Step 3. Pushing to Remote Repo
 
 
+git push origin bitbucket:bitbucket
+git push origin bitbucket2  
+
 ## Reference 
 - https://www.atlassian.com/git/tutorials/learn-git-with-bitbucket-cloud#create-the-repository
