--- a/BitBucket/1.Chapter1.md
+++ b/BitBucket/1.Chapter1.md
@@ -51,9 +51,25 @@ If you get this error you need to do something like this
 
 ## Step 3. Pushing to Remote Repo
 
-
-git push origin bitbucket:bitbucket
+This command specifies that you are pushing to the `bitbucket2` branch (the branch on GitHub) on origin (the GitHub server). 
+````
 git push origin bitbucket2  
+````
+
+Another Syntax:
+
+````
+git push origin bitbucket:bitbucket
+````
+
+
+## Step 4 : Pullin from Remote Repo
+
+````
+git pull // Only pulls the current Branch
+git pull --all
+````
+
 
 ## Reference 
 - https://www.atlassian.com/git/tutorials/learn-git-with-bitbucket-cloud#create-the-repository
