--- a/BitBucket/1.Chapter1.md
+++ b/BitBucket/1.Chapter1.md
@@ -1,6 +1,5 @@
 ## Step 1. Clone your repository to your local system
 ````Shell
-````Shell
 $ git clone
 
 https://emmap1@bitbucket.org/emmap1/bitbucketstationlocations.git 
@@ -11,7 +10,7 @@ Password for 'https://emmap1@bitbucket.org': No such file or directory
 ````
 
 If you get this error you need to do something like this 
-````Shell
+
 ````Shell
   $ git config --global core.askpass
 ````
@@ -69,6 +68,38 @@ git push origin bitbucket:bitbucket
 git pull // Only pulls the current Branch
 git pull --all
 ````
+
+
+## Merge your branch Locally
+- We are in branch `main` and we want to merge the content from branch `bitbucket` ; after this the local `main` branch will be updated . We need to push it to remote via a PR
+````
+git merge bitbucket    // merges the content of branch bitbucket into main
+````
+
+
+## Merge your branch Remotely
+Raise PR
+## Delete a Branch
+
+Delete a Remote branch 
+````
+git push -d origin <remote branch name> 
+
+```` 
+
+Delete a Local branch 
+````
+git branch -d  <local branch name> 
+git branch -D  <local branch name>   // Force Delete
+````
+
+
+## Push your code remotely
+You need to raise a PR in real life apps. But in small application we can use command `merge`
+````
+$ git push origin main
+````
+![Image](/BitBucket/Images/1/3.svg)
 
 
 ## Reference 
